# v-c-bc

./: .gitignore  .gitmodules  Makefile  README.md  meson.build
cross/: armv7-soft-cross.txt
include/vcblockchain/: byteswap.h  error_codes.h  ssock.h
include/vcblockchain/ssock/: data.h
src/: stub.c
src/byteswap/: bswap_64.c  htonll.c  ntohll.c
src/ssock/: ssock_init_from_posix.c  ssock_read.c  ssock_read_data.c  ssock_read_int64.c  ssock_read_int8.c  ssock_read_string.c  ssock_read_uint64.c  ssock_read_uint8.c  ssock_write.c  ssock_write_data.c  ssock_write_int64.c  ssock_write_int8.c  ssock_write_string.c  ssock_write_uint64.c  ssock_write_uint8.c
subprojects/: gtest.wrap  libevent.wrap  lmdb.wrap  vccert.wrap  vccrypt.wrap  vcdb.wrap  vcmodel.wrap  vpr.wrap
test/: testmain.cpp
test/ssock/: dummy_ssock.cpp  dummy_ssock.h  test_ssock_methods.cpp  test_ssock_read_data.cpp  test_ssock_read_int64.cpp  test_ssock_read_int8.cpp  test_ssock_read_string.cpp  test_ssock_read_uint64.cpp  test_ssock_read_uint8.cpp  test_ssock_write_data.cpp  test_ssock_write_int64.cpp  test_ssock_write_int8.cpp  test_ssock_write_string.cpp  test_ssock_write_uint64.cpp  test_ssock_write_uint8.cpp
